{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 63,
  "lineage": "f6eb683e-aa24-dd8a-9d22-18a803801ba1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_controller",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.196.82.130",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-11-25T23:19:20.381-08:00",
            "id": "projects/multicloud-kubernetes/regions/us-east1/addresses/controller-public",
            "name": "controller-public",
            "network_tier": "PREMIUM",
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/addresses/controller-public"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-26T00:35:02.854-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-bastion",
            "name": "dlos-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "priority": 1000,
            "project": "multicloud-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-26T00:35:02.878-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-http",
            "name": "dlos-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "priority": 1000,
            "project": "multicloud-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "controller"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-11-26T00:35:02.775-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-internal",
            "name": "dlos-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "priority": 1000,
            "project": "multicloud-kubernetes",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/firewalls/dlos-fw-allow-internal",
            "source_ranges": [
              "10.2.1.0/24",
              "10.2.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "controller_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20190403",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/zones/us-east1-b/disks/dlos-controller"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/multicloud-kubernetes/zones/us-east1-b/instances/dlos-controller",
            "instance_id": "1189575195802819928",
            "label_fingerprint": "2lAmLPjxRm8=",
            "labels": {
              "businessunit": "dlos",
              "cloud": "gcp",
              "component": "controller",
              "name": "dlos-development-controller",
              "owner": "chitender-kumar",
              "project": "dlos",
              "technologyunit": "infrastructure"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "dlos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDRPjE9xyM6rMakE16M5qRpl/cVJ2q+H453v4fC1oYDSxRumDerYTkNpedYI+qdLr+hIHv92CPtBDW84z7rF8ctGg7vKdWxk2AYxLFTtmS7r5oO2WE7Tx4ZGa8rVjzm94Jsxeblcz4v/9GDWX935mLXHyhgKr6SS8Nq/D+tgzoY8ta2Q/ZXpzLEM+uw23uPkJ+v1X8+ZyGX9oha9A8XM1vSLNmHD+A+jM0wiFyPS3MR1CWistJM6wJJo/EqigDran8P4y6KK19NP9YlRiK2pY/C5RmD4Q9pA/hZ6E+CcM1S2+o01QCmTzLtsQw7sspS0HgVJCyVp164A3psFPvjzf2f delhivery@DV-LT-N-017992.local\n"
            },
            "metadata_fingerprint": "3aL3Q-CO1Qw=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync; pip install flask",
            "name": "dlos-controller",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.82.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
                "network_ip": "10.2.1.12",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-controller",
                "subnetwork_project": "multicloud-kubernetes"
              }
            ],
            "project": "multicloud-kubernetes",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/zones/us-east1-b/instances/dlos-controller",
            "tags": [
              "controller",
              "ssh"
            ],
            "tags_fingerprint": "mgRAEDvxWLc=",
            "zone": "us-east1-b"
          },
          "depends_on": [
            "google_compute_address.static_controller",
            "google_compute_subnetwork.controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_three",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "name": "dlos-development-vpc",
            "project": "multicloud-kubernetes",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "controller",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-25T23:09:48.558-08:00",
            "fingerprint": "Vdw2C9R64Ts=",
            "gateway_address": "10.2.1.1",
            "id": "projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-controller",
            "ip_cidr_range": "10.2.1.0/24",
            "name": "dlos-development-controller",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "private_ip_google_access": false,
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-controller"
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "worker",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-26T00:35:02.886-08:00",
            "fingerprint": "CqG1y5buIyc=",
            "gateway_address": "10.2.2.1",
            "id": "projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-worker",
            "ip_cidr_range": "10.2.2.0/24",
            "name": "dlos-development-worker",
            "network": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/global/networks/dlos-development-vpc",
            "private_ip_google_access": false,
            "project": "multicloud-kubernetes",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/multicloud-kubernetes/regions/us-east1/subnetworks/dlos-development-worker"
          },
          "depends_on": [
            "google_compute_network.vpc_three"
          ]
        }
      ]
    }
  ]
}